Updates to the main login page

--- a/flightApplication/flightAppWeb/public/css/flexbox.css
+++ b/flightApplication/flightAppWeb/public/css/flexbox.css
@@ -3,88 +3,79 @@
     padding: 0;
 }
 
+body {
+    /*background-image: url("../images/airport.jpg");
+    background-repeat: no-repeat;*/
+    background-color: lightslategray;
+}
 .wrapper{
     display: flex;
     width:100%;
 }
 
-header {
-    height: 50px;
-    width: 100%;
-    background-color: gray;
-    font-family: cursive;
+.bg_image {
+    background-image: url("../images/airport.jpg");
+    background-repeat: no-repeat;
+    height: 500px;
+    width: 1200px;
+    margin-right: auto;
+    margin-left: auto;
+    position:
 }
-nav {
+
+.loginContainer {
+    float: right;
+    padding: 20px;
+}
+/* Style the form - display items horizontally */
+.form-inline { 
     display: flex;
-    padding-top: 10px;
-}
-nav ul {
-    display: flex;
-    margin: 0 auto;
-    width: 200px;
-    justify-content: center;
-}
- li{
-     float:left;
-     padding: 0 10px;
-     width: 100px;
- }
-
- label{
-     padding: 1px;
-     justify-content: center;
- }
-
-ul, 
-li {
-    list-style: none;
-}
-
-.login{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-}
-
-
-form {
-    border: 3px solid #f1f1f1;
-    width: 250px;
-    justify-content: center;
+    flex-flow: row wrap;
+    align-items: center;
+    float: right;
   }
-
  
-input[type=text], input[type=password] {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-  }
-  button {
-    background-color: blue;
-    color: white;
+ /* Style the input fields */
+  .form-inline input {
+    vertical-align: middle;
+    margin: 5px 10px 5px 0;
     padding: 10px 20px;
-    margin: 22px 20px;
-    border: 2px;
-    cursor: pointer;
-    width: 80%;
-    
+    background-color: #fff;
+    border: 1px solid #ddd;
+  }
+  
+  /* Style the submit button */
+  .form-inline button {
+    padding: 10px 20px;
+    background-color: dodgerblue;
+    border: 1px solid #ddd;
+    color: white;
+  }
+  
+  .form-inline button:hover {
+    background-color: royalblue;
+  }
+  
+  /* Add responsiveness - display the form controls vertically instead of horizontally on screens that are less than 800px wide */
+  @media (max-width: 800px) {
+    .form-inline input {
+      margin: 10px 0;
+    }
+  
+    .form-inline {
+      flex-direction: column;
+      align-items: stretch;
+    }
   }
 
-  button:hover {
-    opacity: 0.8;
-    position: relative;
+  .fltText {
+      display: flex;
+      font-weight: 100;
+      font-family: fantasy;
+      font-size:xx-large;
+      color: whitesmoke;
+      padding:10px;
   }
-.content {
-    min-height: 100%;
-    width: 100%;
-    display:flex;
-    justify-content: center;
-    margin-top: 30px;
-}
 
 footer {
     height: 30px;
@@ -93,4 +84,6 @@ footer {
     bottom: 0;
     background-color: red;
     color:white;
+    float: left;
+
 }
